# donni

./: .coveragerc  .gitignore  1d-2epoch.py  Makefile  README.md  conda-env.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
dadinet/: __main__.py  dadi_dem_models.py  generate_data.py  plot.py  portik_models_2d_update.py  predict.py  train.py
data/1d-2epoch/: mlpr_1000  mlpr_10000  test-data-exclude  test-data-exclude-2  test-data-exclude-3  test-data-full  train-data-exclude  train-data-full
data/2d-splitmig/: test-data  test-data-corrected  test-data-corrected-2  test-data-vary-T-m
doc/: readme.txt
donni/: __main__.py  custom_models.py  dadi_dem_models.py  generate_data.py  infer.py  pipeline_arizona_hpc.py  plot.py  portik_models_2d.py  portik_models_2d_update.py  portik_models_3d.py  predict.py  train.py  validate.py
draft-code/1d-2-epoch/: 1d-2epoch-noise.txt  1d-2epoch-test1.txt  1d-2epoch-test2.txt  1d-2epoch-v2.py  1d-2epoch-v3.2.py  1d-2epoch-v3.py  1d-2epoch-v4.2.py  1d-2epoch-v4.py  1d-2epoch-v5.py  1d-2epoch-v6.py  1d-2epoch-v7.2.1.py  1d-2epoch-v7.2.2.py  1d-2epoch-v7.2.py  1d-2epoch-v7.py  1d-2epoch.txt  connie-1d-2epoch.py  connie-2epoch-noise-out.txt  connie-2epoch_log_noisy.py  connie-2epoch_log_only.py  connie-2epoch_noise.py  connie-2epoch_random_tests.py  log-nu-out.txt  log-nu-train-noise-out.txt  random-noise-noise-out.txt  random0.1-noise-out.txt  random0.2-noise-out.txt  random0.3-noise-out.txt
examples/: generate_data_split_mig_20_20.sh  generate_data_two_epoch_20.sh
ml_dadi/: data_manip.py  ml_models.py  plotting.py
mlpr/: __main__.py  dadi_dem_models.py  generate_data.py  train.py
results/: 1d-2epoch.txt  2d-split-mig.txt  R2Scores-compilation-092920.xlsx  R2Scores-compilation-20201201.xlsx
src/: generate_data.py  main.py  train.py
tests/: Makefile  README.md  test_generate_data.py  test_infer.py  test_integration.py  test_main.py  test_predict.py  test_train.py
(+168 files in other folders)
