[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donni"
version = "0.0.1"
description = "Demography Optimization via Neural Network Inference"
readme = "README.md"
authors = [
    { name = "Linh Tran", email = "lnt@arizona.edu" },
    { name = "Connie Sun", email = "conniesun@arizona.edu" }
]
license = ""
dependencies = [
    "dadi",
    "flake8",
    "mapie == 0.6.1",
    "mypy",
    "pylint",
    "pytest",
    "pytest-flake8",
    "pytest-mypy",
    "pytest-pylint",
    "scikit-learn == 1.2.0",
    "python-irodsclient == 1.1.6",
    "appdirs == 1.4.4",
]

[project.scripts]
donni = "donni.__main__:main"

[tool.hatch.version]
path = "donni/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/donni",
]


