[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donni"
version = "0.9.0"
description = "Demography Optimization via Neural Network Inference"
readme = "README.md"
requires-python = ">=3.7"
license = ""
dependencies = [
    "dadi",
    "python-irodsclient == 1.1.6",
    "appdirs == 1.4.4",
    "keras-tuner==1.4.6",
    "tensorflow>=2.12",
]

[project.scripts]
donni = "donni.__main__:main"

[tool.hatch.version]
path = "donni/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/donni",
]